<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Student_SignUp_Activity"
        android:orientation="vertical"
        android:padding="30dp">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/admin_fullname_InputLayout_SignUp_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:errorEnabled="true"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@android:color/background_dark">
            <EditText
                android:id="@+id/admin_fullname_SignUp_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullName"
                android:textSize="20sp"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/admin_username_InputLayout_SignUp_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:errorEnabled="true"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@android:color/background_dark">
            <EditText
                android:id="@+id/admin_username_SignUp_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userName"
                android:textSize="20sp"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/admin_email_InputLayout_SignUp_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:errorEnabled="true"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@android:color/background_dark">
            <EditText
                android:id="@+id/admin_email_SignUp_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textSize="20sp"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/admin_password_InputLayout_SignUp_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@android:color/background_dark">
            <EditText
                android:id="@+id/admin_password_SignUp_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textSize="20sp"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/admin_register_SignUp_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/register"
            android:textColor="@android:color/background_dark"
            android:background="@drawable/buttonstyle"
            android:layout_marginTop="30dp"/>
        <Button
            android:id="@+id/admin_Login_SignUp_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/login"
            android:textColor="@android:color/background_dark"
            android:background="@drawable/buttonstyle"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"/>
    </LinearLayout>
</ScrollView>