<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:weightSum="12">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_shape_background"
                    android:orientation="vertical"
                    android:layout_weight="3">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ic_login_background"
                        android:contentDescription="login background" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    android:textColor="@android:color/background_light"
                    android:layout_gravity="center"
                    android:text="Student"
                    android:layout_marginTop="40dp"/>
                <androidx.cardview.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp"
                    android:elevation="5dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/whiteCardColor">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="20dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryTextColor"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textSize="22dp"
                            android:text="@string/register"
                            android:layout_marginTop="20dp"/>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/student_Name_InputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="22dp"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                            <EditText
                                android:id="@+id/student_Name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="18dp"
                                android:inputType="text"
                                android:hint="Name"/>
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/student_phoneNo_InputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="22dp"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                            <EditText
                                android:id="@+id/student_phoneNo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="18dp"
                                android:inputType="text"
                                android:hint="Mobile Number"/>
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/student_class_InputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="22dp"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                            <EditText
                                android:id="@+id/student_class"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="18dp"
                                android:inputType="text"
                                android:hint="Class"/>
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/student_semester_InputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="22dp"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                            <EditText
                                android:id="@+id/student_semester"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="18dp"
                                android:inputType="text"
                                android:hint="Semester"/>
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/student_RollNo_InputLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="22dp"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                            <EditText
                                android:id="@+id/student_RollNo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="18dp"
                                android:inputType="text"
                                android:hint="Roll No."/>
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/student_email_InputLayout_registration_activity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="22dp"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                            <EditText
                                android:id="@+id/student_email_registration_activity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="18dp"
                                android:inputType="textEmailAddress"
                                android:hint="@string/login_email_hint"/>
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/student_password_InputLayout_registration_activity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="22dp"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                            <EditText
                                android:id="@+id/student_password_registration_activity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="18dp"
                                android:inputType="textPassword"
                                android:hint="@string/login_password_hint"/>
                        </com.google.android.material.textfield.TextInputLayout>


                        <RadioGroup
                            android:id="@+id/student_gender_radioGroup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dp">
                            <TextView
                                android:id="@+id/student_gender"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/background_dark"
                                android:text="@string/gender"
                                android:textSize="20sp"/>
                            <RadioButton
                                android:id="@+id/student_radio_male_registration_activity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="15sp"
                                android:text="@string/male"
                                android:textColor="@android:color/background_dark"
                                android:layout_marginLeft="10dp"/>
                            <RadioButton
                                android:id="@+id/student_radio_female_registration_activity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/background_dark"
                                android:text="@string/female"
                                android:textSize="15sp"
                                android:layout_marginLeft="10dp"/>

                        </RadioGroup>
                        <Button
                            android:id="@+id/student_ChooseImage_Button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:background="@drawable/buttonstyle"
                            android:textColor="@color/whiteTextColor"
                            android:textSize="18sp"
                            android:text="Attach Image"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="20dp"/>
                        <Button
                            android:id="@+id/student_registration_Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:background="@drawable/button_background"
                            android:textColor="@color/whiteTextColor"
                            android:textSize="18sp"
                            android:text="SignUp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="20dp"/>
                        <TextView
                            android:id="@+id/student_goTo_LogIn_activity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textColor="@color/primaryTextColor"
                            android:text="@string/signup_login_hint"
                            android:layout_marginTop="20dp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
