<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBkColor">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:weightSum="12">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_shape_background"
                    android:orientation="vertical"
                    android:layout_weight="3">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_login_background"
                        android:contentDescription="login background" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@android:color/background_light"
                    android:layout_gravity="center"
                    android:text="Student"
                    android:layout_marginTop="40dp"/>
                <androidx.cardview.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp"
                    android:elevation="5dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/whiteCardColor">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:padding="20dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:textAlignment="center"
                            android:text="Login"
                            android:layout_marginTop="20dp"/>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/student_email_InputLayout_login_activity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="22dp"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                            <EditText
                                android:id="@+id/student_email_login_activity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="18dp"
                                android:inputType="textEmailAddress"
                                android:hint="@string/login_email_hint"/>
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/student_password_InputLayout_login_activity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="22dp"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                            <EditText
                                android:id="@+id/student_password_login_activity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="18dp"
                                android:inputType="textPassword"
                                android:hint="@string/login_password_hint"/>
                        </com.google.android.material.textfield.TextInputLayout>
                        <TextView
                            android:id="@+id/student_forgotPassword_login_activity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Forgot Password?"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="18sp"
                            android:layout_gravity="end"
                            android:textAlignment="textEnd"
                            android:layout_marginTop="10dp"/>
                        <Button
                            android:id="@+id/student_login_login_activity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_background"
                            android:textStyle="bold"
                            android:textColor="@color/whiteTextColor"
                            android:textSize="18sp"
                            android:text="Login"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="20dp"/>
                        <TextView
                            android:id="@+id/student_register_login_activity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textColor="@color/primaryTextColor"
                            android:text="@string/login_signup_hint"
                            android:layout_marginTop="20dp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>

